media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  namespace: media
spec:
  selector:
    app: nzbget
  ports:
  - port: 80
    targetPort: http
    name: http
