media/nzbget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget
  namespace: media
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: nzbget.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: nzbget
            port: 
              name: http
  tls:
    - hosts:
        - nzbget.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
